--- a/application/admin/view/activity/index.html
+++ b/application/admin/view/activity/index.html
@@ -1,15 +1,55 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<ul>
-    <li><a href="/admin/Activity/create">Create new</a></li>
-</ul>
-{volist name="activities" id="activity"}
-<a href="/admin/activity/view?id={$activity.id}">{$activity.caption}</a><a href="/admin/activity/edit?id={$activity.id}">Edit</a><br/>
-{/volist}
-</body>
-</html>
+{extend name="public:base"/}
+
+{block name="title"}管理活动{/block}
+
+{block name="tab"}manage_activity{/block}
+{block name="header"}
+<script type="text/javascript">
+    $(function(){
+        $(".deleteactivity").click(function(){
+            alert("delete");
+        });
+    });
+</script>
+{/block}
+{block name="content"}
+<div class="content">
+    <ol class="breadcrumb"><li>管理活动</li></ol>
+    <label class="text-info">当前一共有{$activities|count}条活动 </label>
+    <span class="text-info pull-right"><a href="/admin/activity/create">新建</a></span>
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <td>ID</td>
+                <td>标题</td>
+                <td>开始时间</td>
+                <td>状态</td>
+                <td>编辑</td>
+                <td>删除</td>
+            </tr>
+        </thead>
+        <tbody>
+        {volist name="activities" id="activity"}
+        {if condition="$activity.status eq 0"}
+        <tr class="">
+            {else/}
+            <tr class="success">
+        {/if}
+
+                <td>{$activity.id}</td>
+                <td>{$activity.caption}</td>
+                <td>{$activity.start}</TD>
+                <td>
+                    {switch name="$activity.status"}
+                        {case value='0'}未发布{/case}
+                        {case value='1'}已发布{/case}
+                    {/switch}
+                </td>
+                <td><a href="/admin/activity/edit?id={$activity.id}"><span class="glyphicon glyphicon-edit"></span></a></td>
+                <td><a class="deleteactivity" href="#"><span class="glyphicon glyphicon-trash"></span></a></td>
+            </tr>
+        {/volist}
+        </tbody>
+    </table>
+</div>
+{/block}
