--- a/public/static/css/wewalk-admin.css
+++ b/public/static/css/wewalk-admin.css
@@ -32,12 +32,16 @@
     background-color: #428bca;
 }
 
+.content_panel
+{
+    margin-top: 60px;
+}
 .content
 {
     width: 914px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 60px;
+    margin-bottom: 60px;
 }
 
 .mce_edit_panel
@@ -49,4 +53,14 @@
 {
     max-width: 480px;
     max-height: 320px;
+}
+
+.info_bar
+{
+    position: fixed;
+    left: 50%;
+    top: 30%;
+    z-index:1001;
+    display:none;
+    padding:10px 50px ;
 }
