fixed index app failed load view tag issue

--- a/application/index/view/public/base.html
+++ b/application/index/view/public/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>{block name="title"}{block}</title>
+    <title>{block name="title"}{/block}</title>
     <link rel="stylesheet" href="/static/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/static/css/wewalk.css"/>
     <script src="/static/js/jquery-3.1.1.js"></script>
