--- a/application/admin/view/activity/edit.html
+++ b/application/admin/view/activity/edit.html
@@ -17,7 +17,7 @@
         tinymce.init({
             selector: 'textarea',
             language: 'zh_CN',
-            automatic_uploads: false,
+            automatic_uploads: true,
             images_upload_url: '/admin/blog/uploadImage',
             plugins: "image imagetools paste",
             images_upload_credentials: true,
