--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -4,6 +4,79 @@
 
 {block name="tab"}page_index{/block}
 
-{block name=“content"}
-<h1>hello world</h1>
+{block name="header"}
+{/block}
+
+{block name="content"}
+
+<div class="container-fluid">
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1" ></li>
+            <li data-target="#carousel-example-generic" data-slide-to="2" ></li>
+        </ol>
+
+        <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <img src="holder.js/1920x300"/>
+            </div>
+            <div class="item">
+                <img src="holder.js/1920x300"/>
+            </div>
+            <div class="item">
+                <img src="holder.js/1920x300"/>
+            </div>
+        </div>
+    </div>
+</div>
+
+<h2 class="text-primary center">活动推荐</h2>
+<div class="container-fluid recommend-activity">
+    <div class="container">
+        <h4 class="text-primary">周边路线</h4>
+        <div class="col-md-4 center">
+            <img src="holder.js/200x200"/>
+        </div>
+        <div class="col-md-4 center">
+            <img src="holder.js/200x200"/>
+        </div>
+        <div class="col-md-4 center">
+            <img src="holder.js/200x200"/>
+        </div>
+    </div>
+</div>
+
+
+<div class="container-fluid recommend-activity" style="margin-top:20px;">
+    <div class="container">
+        <h4 class="text-primary ">长途路线</h4>
+        <div class="col-md-4 center">
+            <img src="holder.js/320x240"/>
+        </div>
+        <div class="col-md-4 center">
+            <img src="holder.js/320x240"/>
+        </div>
+        <div class="col-md-4 center">
+            <img src="holder.js/320x240"/>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <h1 class="text-primary center">精彩游记</h1>
+    <div class="row">
+        <div class="col-md-6">
+            COL-MD-6
+        </div>
+        <div class="col-md-6">
+            COL-MD-6
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <h1 class="text-primary center">加入我们</h1>
+</div>
+
 {/block}
