--- a/public/static/css/wewalk.css
+++ b/public/static/css/wewalk.css
@@ -19,3 +19,31 @@
     padding-bottom: 20px;
     background: white;
 }
+
+.activity-list-item{
+    text-align: center;
+    border-radius: 10px;
+    margin: 0 auto 30px;
+    max-width: 375px;
+    margin: 0 auto 30px;
+    background: white;
+    padding-bottom: 10px;
+}
+
+.activity-list-item > a
+{
+    font-size:1.2em;
+    color: black;
+}
+
+.activity-list-item > a:hover
+{
+    color: green;;
+}
+
+.activity-list-item > a > img
+{
+    max-width: 100%;!important;
+    height: auto;!important;;
+    margin-bottom: 10px;
+}
