--- a/application/admin/view/activity/create.html
+++ b/application/admin/view/activity/create.html
@@ -19,8 +19,14 @@
             language: 'zh_CN',
             automatic_uploads: true,
             images_upload_url: '/admin/blog/uploadImage',
-            plugins: "image imagetools paste textcolor colorpicker",
-            toolbar: "forecolor backcolor",
+            plugins: [
+                'advlist autolink lists link image charmap print preview hr anchor pagebreak',
+                'searchreplace wordcount visualblocks visualchars code fullscreen',
+                'insertdatetime media nonbreaking save table contextmenu directionality',
+                'emoticons template paste textcolor colorpicker textpattern imagetools codesample toc'
+            ],
+            toolbar1: 'undo redo | insert | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image',
+            toolbar2: 'print preview media | forecolor backcolor emoticons | codesample',
             images_upload_credentials: true,
             paste_data_images: true
         });
