--- a/public/static/css/wewalk-admin.css
+++ b/public/static/css/wewalk-admin.css
@@ -38,7 +38,7 @@
 }
 .content
 {
-    width: 914px;
+    max-width: 720px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 60px;
