finished create and edit blog admin function

--- a/application/admin/view/activity/edit.html
+++ b/application/admin/view/activity/edit.html
@@ -13,24 +13,8 @@
 
     $(function () {
 
-        //  initialize TINYMCE
-        tinymce.init({
-            selector: 'textarea',
-            language: 'zh_CN',
-            automatic_uploads: true,
-            images_upload_url: '/admin/blog/uploadImage',
-            plugins: [
-                'advlist autolink lists link image charmap print preview hr anchor pagebreak',
-                'searchreplace wordcount visualblocks visualchars code fullscreen',
-                'insertdatetime media nonbreaking save table contextmenu directionality',
-                'emoticons template paste textcolor colorpicker textpattern imagetools codesample toc'
-            ],
-            toolbar1: 'undo redo | insert | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image',
-            toolbar2: 'print preview media | forecolor backcolor emoticons | codesample',
-            images_upload_credentials: true,
-            paste_data_images: true
-        });
-
+        {include file="public/tinymce"/}
+        $("#content").show();
         //  register cover preview
         function viewImage(file){
             if(file != undefined)
@@ -118,7 +102,7 @@
             <label for="price">价格</label>
             <input type="text" class="form-control" id="price" name="price" placeholder="￥" value="{$activity.price}"/>
         </div>
-        <textarea name="content" id="content" class="mce_edit_panel">{$activity.content}</textarea><br/>
+        <textarea name="content" id="content" class="mce_edit_panel" style="display:none;">{$activity.content}</textarea><br/>
         <div class="form-group">
             <label for="cover">封面图片<mark>比例为4:3</mark></label>
             <input type="file" class="form-control" id="cover" name="cover" />
