--- a/application/admin/view/activity/index.html
+++ b/application/admin/view/activity/index.html
@@ -15,7 +15,7 @@
 {block name="content"}
 <div class="content">
     <ol class="breadcrumb"><li>管理活动</li></ol>
-    <label class="text-info">当前一共有{$activities|count}条活动 </label>
+    <label class="text-info">当前一共有<strong>{$activities|count}</strong>条活动 </label>
     <span class="text-info pull-right"><a href="/admin/activity/create">新建</a></span>
     <table class="table table-hover">
         <thead>
