--- a/application/admin/view/public/base.html
+++ b/application/admin/view/public/base.html
@@ -67,8 +67,8 @@
                 </ul>
 
                 <ul class="nav nav-sidebar">
-                    <li id="new_blog"><a href="#">新游记</a></li>
-                    <li id="manage_blog"><a href="#">管理游记</a></li>
+                    <li id="manage_blog"><a href="/admin/blog/index">管理游记</a></li>
+                    <li id="new_blog"><a href="/admin/blog/create">新游记</a></li>
                 </ul>
             </div>
 
