--- a/application/index/view/public/base.html
+++ b/application/index/view/public/base.html
@@ -34,7 +34,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li id="page_index"><a href="/">主页</a></li>
                 <li id="page_activity"><a href="/index/activity/index">活动</a></li>
-                <li id="page_blog"><a href="#">游记</a></li>
+                <li id="page_blog"><a href="/index/blog/index">游记</a></li>
                 <li id="page_aboutus"><a href="#">我们</a></li>
             </ul>
         </div>
