--- a/application/admin/view/public/base.html
+++ b/application/admin/view/public/base.html
@@ -57,8 +57,7 @@
         <div class="row">
             <div class="col-xs-3 col-sm-3 col-md-2 sidebar">
                 <ul class="nav nav-sidebar">
-                    <li id="overall_page"><a href="#">总览</a></li>
-                    <li id="report_page"><a href="#">报告</a></li>
+                    <li id="overall_page"><a href="/admin/index/index">总览</a></li>
                 </ul>
 
                 <ul class="nav nav-sidebar">
