--- a/application/index/view/public/base.html
+++ b/application/index/view/public/base.html
@@ -12,7 +12,7 @@
 
     <script type="text/javascript">
         $(function(){
-            $('#{block name="tab"}{/block}').addClass("active").children("a").attr("href", "#");
+            $('#{block name="tab"}{/block}').addClass("active");
         })
     </script>
     {block name="header"}
