--- a/application/index/view/activity/view.html
+++ b/application/index/view/activity/view.html
@@ -45,24 +45,48 @@
     {
         max-width: 100%;
         height: auto;
+        border-radius: 10px;
     }
 
 </style>
+
+<script type="text/javascript">
+    $(function(){
+    });
+</script>
 {/block}
 {block name="content"}
 <div class="container">
     <ol class="breadcrumb">
         <li><a href="/index/activity/">全部活动</a></li>
-        <li class="active">浏览</li>
+        <li class="active">{$activity.caption}</li>
     </ol>
     <h1 class="activity-caption">{$activity.caption}</h1>
     <div class="activity-content">
-        <p class="input-lg text-primary">地点: {$activity.location}</p>
-        <p class="input-lg text-primary">时间: {$activity.start} 到 {$activity.end}</p>
-        <p class="input-lg text-primary">价格: {$activity.price}</p>
+        <p class="text-label">地点: <span class="text-activity-value">{$activity.location}</span></p>
+        <p class="text-label">开始时间: <span class="text-activity-value">{$activity.start|date="Y年n月j号",###} </span></p>
+        <p class="text-label">结束时间: <span class="text-activity-value">{$activity.start|date="Y年n月j号",###} </span></p>
+        <p class="text-label">价格: <span class="text-activity-value">￥{$activity.price}</span></p>
+        <button class="btn btn-primary" id="order-now" data-toggle="modal" data-target="#order-now-dialog">现在报名</button>
+
     </div>
     <div class="activity-content">
         {$activity.content}
+    </div>
+</div>
+
+
+<!--dialogs-->
+<div class="modal fade" id="order-now-dialog" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-md" role="document">
+        <div class="modal-content">
+            <div style="margin: 20px">
+                <h3>在线预约系统开发中...</h3>
+                <p class="text-info">在线预约系统正在开发中，在此期间请通过QQ群的方式报名。</p>
+                <p class="text-info">我们会尽快完善站点的功能 :)。</p>
+            </div>
+
+        </div>
     </div>
 </div>
 {/block}
