finished show featured activities and blogs in home page

--- a/application/admin/view/activity/index.html
+++ b/application/admin/view/activity/index.html
@@ -38,7 +38,7 @@
 
                 <td>{$activity.id}</td>
                 <td>{$activity.caption}</td>
-                <td>{$activity.start}</TD>
+                <td>{$activity.start|date="Y-m-d H:i:s",###}</TD>
                 <td>
                     {switch name="$activity.status"}
                         {case value='0'}未发布{/case}
