--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="form-group">
             <label for="link1">链接1</label>
-            <input type="text" class="form-control" name="link1" id="link1"/>
+            <input type="text" class="form-control" name="link1" id="link1" value="{$config.home_carousel_link1}"/>
         </div>
 
         <div class="form-group">
@@ -59,7 +59,7 @@
         </div>
         <div class="form-group">
             <label for="link2">链接2</label>
-            <input type="text" class="form-control" name="link2" id="link2"/>
+            <input type="text" class="form-control" name="link2" id="link2"  value="{$config.home_carousel_link2}"/>
         </div>
 
         <div class="form-group">
@@ -68,7 +68,7 @@
         </div>
         <div class="form-group">
             <label for="link3">链接3</label>
-            <input type="text" class="form-control" name="link3" id="link3"/>
+            <input type="text" class="form-control" name="link3" id="link3"  value="{$config.home_carousel_link3}"/>
         </div>
     </form>
     <button id="submit" class="btn btn-primary">提交</button>
