--- a/application/admin/view/activity/edit.html
+++ b/application/admin/view/activity/edit.html
@@ -92,11 +92,11 @@
         </div>
         <div class="form-group">
             <label for="datestart">开始时间</label>
-            <input type="datetime" class="form-control" id="datestart" name="datestart" placeholder="YYYY-MM-DD HH:MM:SS" value="{$activity.start}"/>
+            <input type="datetime" class="form-control" id="datestart" name="datestart" placeholder="YYYY-MM-DD HH:MM:SS" value="{$activity.start|date="Y-m-d H:i:s",###}"/>
         </div>
         <div class="form-group">
             <label for="dateend">结束时间</label>
-            <input type="datetime" class="form-control" id="dateend" name="dateend" placeholder="YYYY-MM-DD HH:MM:SS" value="{$activity.end}"/>
+            <input type="datetime" class="form-control" id="dateend" name="dateend" placeholder="YYYY-MM-DD HH:MM:SS" value="{$activity.end|date="Y-m-d H:i:s",###}"/>
         </div>
         <div class="form-group">
             <label for="price">价格</label>
