--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -5,11 +5,18 @@
 {block name="tab"}page_index{/block}
 
 {block name="header"}
+<style>
+    .carousel_img
+    {
+        width: 100%;
+        margin: 0 auto;
+    }
+</style>
 {/block}
 
 {block name="content"}
 
-<div class="container-fluid">
+<div class="container">
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -19,13 +26,13 @@
 
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img src="holder.js/1920x300"/>
+                <a href="{$config.home_carousel_link1}"><img class="carousel_img" src="/{$config.home_carousel_img1}"/></a>
             </div>
             <div class="item">
-                <img src="holder.js/1920x300"/>
+                <a href="{$config.home_carousel_link2}"><img class="carousel_img" src="/{$config.home_carousel_img2}"/></a>
             </div>
             <div class="item">
-                <img src="holder.js/1920x300"/>
+                <a href="{$config.home_carousel_link3}"><img class="carousel_img" src="/{$config.home_carousel_img3}"/></a>
             </div>
         </div>
     </div>
@@ -35,19 +42,26 @@
 <div class="container-fluid recommend-activity">
     <div class="container">
         <h4 class="text-primary">周边路线</h4>
-        <div class="col-md-4 center">
-            <img src="holder.js/200x200"/>
+        {foreach name="featuredactivity" item="activity"}
+        {if condition="$key%3 eq '0'"}
+        <div class="row text-center">
+            {/if}
+            <div class="col-sm-4">
+                <div class="activity-list-item">
+                    <a href="/index/activity/view?id={$activity.id}"><img src="/{$activity.cover}"/></a>
+                    <a href="/index/activity/view?id={$activity.id}"><span>[{$activity.start|date="n月j号",###}] </span>{$activity.caption}</a>
+                    <span></span>
+                </div>
+            </div>
+            {if condition="$key%3 eq '2'"}
         </div>
-        <div class="col-md-4 center">
-            <img src="holder.js/200x200"/>
-        </div>
-        <div class="col-md-4 center">
-            <img src="holder.js/200x200"/>
-        </div>
+        {/if}
+        {/foreach}
     </div>
 </div>
 
 
+<!--
 <div class="container-fluid recommend-activity" style="margin-top:20px;">
     <div class="container">
         <h4 class="text-primary ">长途路线</h4>
@@ -62,16 +76,26 @@
         </div>
     </div>
 </div>
-
+-->
 <div class="container">
     <h1 class="text-primary center">精彩游记</h1>
     <div class="row">
-        <div class="col-md-6">
-            COL-MD-6
+        {foreach name="featuredBlog" item="blog"}
+        <div class="blog-entry ">
+            <div class="col-md-6 col-sm-6">
+                <a href="/index/blog/view?id={$blog.id}"> <img class="img-rounded blog-entry-img center-block" src="/{$blog.cover}"/></a>
+            </div>
+            <div class="col-md-6 col-sm-6">
+                <div>
+                    <h2 class="blog-entry-caption"><a href="/index/blog/view?id={$blog.id}">{$blog.caption}</a></h2>
+                    <h3 class="hidden-xs">{$blog.author}</h3>
+                    <h3 class="hidden-sm hidden-xs">{$blog.createtime|date="n月j号",###}</h3>
+                </div>
+            </div>
         </div>
-        <div class="col-md-6">
-            COL-MD-6
-        </div>
+        <div class="clearfix"></div>
+        <hr style="border-color:#eee;"/>
+        {/foreach}
     </div>
 </div>
 
